Minor bug. When I use it on mobile, the button at the bottom [whether "Add Scores" or "Next Player"] roll off the bottom and I need to scroll to get to them. Is there a way to make the app just a little bit more responsive to fit the screen automatically so I don't have to scroll?

--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ body {
 #root {
   max-width: 500px;
   margin: 0 auto;
-  min-height: 100vh;
+  height: 100dvh;
   display: flex;
   flex-direction: column;
 }
